--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,7 @@
 
     <div class="container-fluid">
         <h1>ML EfficientNet-Lite4</h1>
-        <p>ONNX Model Demonstration by ZID (Version 1.0)</p>
+        <p>ONNX Elefant Demonstration by ZID (Version 1.0)</p>
 
         <form>
             <div class="form-group">
