--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
 
         <form>
             <div class="form-group">
-                <label for="exampleFormControlFile1">Guguseli</label>
+                <label for="exampleFormControlFile1">Guguseli Ahoi</label>
                 <input type="file" accept="image/png, image/jpeg" class="form-control-file" id="image" name="image"
                     onchange="checkFiles(this.files);">
             </div>
