--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="container-fluid">
-        <h1>Wochenende</h1>
+        <h1>Wochenende endlich!!!!!!!!!!!!!!!!!</h1>
         <p>ONNX Elefant Demonstration by ZID (Version 1.0)</p>
 
         <form>
